# HikeenAT

./: .gitignore  AMD_api.cpp  CMakeLists.txt  Graphics_api.h  Intel_api.cpp  Nvidia_api.cpp  hikeenat.cpp  hikeenat.h  hikeenat.ui  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  qt_func.cpp  qt_func.h  syswindow.cpp  syswindow.h  syswindow.ui  user.cpp  user.h  windows_api.cpp
AMD_include/: mccs.h
Intel_include/: GenericIGCLApp.h
Nvidia_include/: nvapi_lite_common.h  targetver.h
Windows_api/: windows_api.h
